--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     </div>
 
     <div class="download">
-        <a href="#"  target="_blank" class="btn"> download CV </a>
+        <a href="https://drive.google.com/folderview?id=1RLOpKI7C2eTry5rFT4dtg8ywtb3iPoGl"  target="_blank" class="btn"> download CV </a>
     </div>
 
 </section>
@@ -400,7 +400,7 @@
             <div class="info">
                 <!-- <h3>PROJECT TITLE</h3> -->
                 <!-- <video controls loop muted autoplay  width="200em" height="250em"  src="images/lon (1).mp4"></video> -->
-                <video controls loop muted autoplay  width="200em" height="250em"  src="video/tec.mp4"></video>
+                <video controls loop muted autoplay  width="200em" height="250em"  src="tec.mp4"></video>
 
             </div>
         </div>
@@ -410,7 +410,7 @@
             <img src="images/pavna.jpg" alt="">
             <div class="info">
                 <!-- <h3>PROJECT TITLE</h3> -->
-                <video controls loop muted autoplay  width="200em" height="250em"  src="video/lon (1).mp4"></video>
+                <video controls loop muted autoplay  width="200em" height="250em"  src="lon.mp4"></video>
 
             </div>
         </div>
@@ -429,7 +429,7 @@
             <div class="info">
                 <img  style="width:155px;height:225px;" src="images/edge.jpg" alt="">
                 <!-- <h3>PROJECT TITLE</h3> -->
-                <!-- <video controls loop muted autoplay  width="200em" height="250em"  src="images/lon (1).mp4"></video> -->
+                <!-- <video controls loop muted autoplay  width="200em" height="250em"  src="lon (1).mp4"></video> -->
 
             </div>
         </div>
