--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
 
 <!-- footer section  -->
 
-<div class="footer">created by <span> Coding Home </span> | all rights reserved!</div>
+<div class="footer">created by <span> Shivam Portfolio </span> | all rights reserved!</div>
 
 
 
