--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <span>
               <span>Developer</span>
               <span>Web Designer</span>
-              <span>Editor</span>
+              <span>Creator</span>
               <span>Volleyball Player</span>
             </span>
           </span>
@@ -171,7 +171,7 @@
     </div>
 
     <div class="download">
-        <a href="https://drive.google.com/folderview?id=1RLOpKI7C2eTry5rFT4dtg8ywtb3iPoGl"  target="_blank" class="btn"> download CV </a>
+        <a href="https://drive.google.com/folderview?id=1RLOpKI7C2eTry5rFT4dtg8ywtb3iPoGl"  target="_blank" class="btn"> Download CV </a>
     </div>
 
 </section>
